Fixed body horizontal scroll

--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background: url("../../images/hero-bg.jpg");
     background-size: cover;
     background-position: center center;
@@ -9,8 +9,8 @@
     &__wrapper {
         position: absolute;
         z-index: 1;
-        width: 100vw;
         height: 100vh;
+        width: 100%;
         background-color: transparentize($black, 0.6);
     }
 
